--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": ">=14.x"
   },
   "scripts": {
+    "build": "rimraf ./build && react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
